[package]
name = "subclient"
version = "0.1.0"
authors = ["Muhamad Azamy <muhamad@incubaid.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substrate-subxt = "0.13.0"
anyhow = "1.0.38"

sp-keyring = "2.0.1"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.node-template-runtime]
path = "../substrate-node/runtime"
