[workspace.package]
authors = ["dylan@threefold.tech"]
documentation = "https://manual.grid.tf"
edition = "2021"
homepage = "https://threefold.io/"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/threefoldtech/tfchain3"
version = "2.5.0-rc1"

[workspace]
members = [
    'node',
    'runtime',
    'support',
    'pallets/*',
]
resolver = "2"

[workspace.dependencies]
# Build deps

# External (without extra features and with default disabled if necessary)
base58 = {version = "0.2.0", default-features = false}
bitflags = {version = "1.3.2", default-features = false}
clap = "4.0.9"
parity-scale-codec = { version = "3.2.2", default-features = false }
env_logger = "0.10.0"
futures = {version = "0.3.21", default-features = false}
hex = {version = "0.4.0", default-features = false}
hex-literal = "0.3.4"
jsonrpsee = "0.16.2"
libsecp256k1 = {version = "0.7", default-features = false}
log = "0.4.17"
scale-info = {version = "2.5.0", default-features = false}
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha3 = {version = "0.10.0", default-features = false}
smallvec = "1.8.0"
valip = "0.4.0"
lite-json = { version = "0.1", default-features = false }
parking_lot = '0.11'

# Internal pallets
pallet-burning = { path = "pallets/pallet-burning", default-features = false }
pallet-dao = { path = "pallets/pallet-dao", default-features = false }
pallet-kvstore = { path = "pallets/pallet-kvstore", default-features = false }
pallet-smart-contract = { path = "pallets/pallet-smart-contract", default-features = false }
pallet-tfgrid = { path = "pallets/pallet-tfgrid", default-features = false }
pallet-tft-price = { path = "pallets/pallet-tft-price", default-features = false }
pallet-validator = { path = "pallets/pallet-validator", default-features = false }
substrate-validator-set = { path = "pallets/substrate-validator-set", default-features = false }
pallet-runtime-upgrade = { path = "pallets/pallet-runtime-upgrade", default-features = false }
pallet-tft-bridge = { path = "pallets/pallet-tft-bridge", default-features = false }

# Internal support 
tfchain-support = { path = "support", default-features = false }

# Runtimes
tfchain-runtime = { path = "runtime", default-features = false }

# Benchmarking (with default disabled)
frame-system-benchmarking = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}

# Substrate (with default disabled)
frame-benchmarking = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
frame-benchmarking-cli = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
frame-executive = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
frame-support = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
frame-system = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
frame-system-rpc-runtime-api = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
frame-try-runtime = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
pallet-aura = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
pallet-authorship = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
pallet-balances = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
pallet-collective = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
pallet-grandpa = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
pallet-membership = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
pallet-scheduler = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
pallet-session = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
pallet-session-benchmarking = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
pallet-sudo = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
pallet-timestamp = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
pallet-transaction-payment = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
pallet-transaction-payment-rpc = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
pallet-transaction-payment-rpc-runtime-api = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
pallet-utility = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
sp-api = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
sp-block-builder = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
sp-consensus-aura = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
sp-core = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
sp-inherents = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
sp-io = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
sp-offchain = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
sp-runtime = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
sp-session = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
sp-transaction-pool = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
sp-version = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
sp-storage = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
try-runtime-cli = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
sp-keystore = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}
sp-staking = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42"}

# Client-only (with default enabled)
polkadot-cli = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42"}
polkadot-primitives = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42"}
polkadot-service = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42"}
sc-basic-authorship = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
sc-chain-spec = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
sc-cli = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
sc-client-api = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
sc-consensus = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
sc-consensus-aura = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
sc-executor = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
sc-consensus-grandpa = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
sc-keystore = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
sc-network = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
sc-rpc = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.42" }
sc-rpc-api = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
sc-service = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
sc-sysinfo = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
sc-telemetry = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
sc-tracing = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
sc-transaction-pool = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
sc-transaction-pool-api = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
sp-blockchain = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
sp-consensus = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
sp-keyring = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
sp-timestamp = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
substrate-build-script-utils = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
substrate-frame-rpc-system = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
substrate-prometheus-endpoint = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}