[package]
authors = ['Threefoldtech <https://github.com/threefoldtech>']
description = 'Substrate TF Grid DB pallet'
edition = '2018'
homepage = 'https://threefold.io'
license = 'Apache'
name = 'pallet-smart-contract'
repository = 'https://github.com/threefoldtech/tfchain_pallets'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.pallet-tfgrid]
default-features = false
path = "../pallet-tfgrid"

[dependencies]
# Substrate packages

substrate-fixed = { git = 'https://github.com/encointer/substrate-fixed.git', rev = "b33d186888c60f38adafcfc0ec3a21aab263aef1" }

pallet-balances = { version = '3.0', default-features = false }
frame-support = { version = '3.0.0', default-features = false }
frame-system = { version = '3.0.0', default-features = false }
sp-core = { version = '3.0.0', default-features = false }
sp-runtime = { version = '3.0.0', default-features = false }
sp-std = { version = '3.0.0', default-features = false }
sp-storage = { version = '3.0.0', default-features = false }
pallet-timestamp = { version = '3.0.0', default-features = false }
sp-io = { version = '3.0.0', default-features = false }
hex = { version = "0.4", default-features = false }
lite-json = { version = "0.1.3", default-features = false }
serde = { version = '1.0.100', default-features = false, features = ['derive'] }

[dependencies.pallet-tft-price]
default-features = false
git = "https://github.com/threefoldtech/tfchain_tft.git"
package = "pallet-tft-price"
branch = "main"
#path = "/home/dylan/Projects/tfchain_tft/pallet-tft-price"

[dev-dependencies]
sp-core = { version = '3.0.0', default-features = false }
sp-io = { version = '3.0.0', default-features = false }
hex-literal = "0.3.1"

[features]
default = ['std']
std = [
	'pallet-balances/std',
	'frame-support/std',
	'frame-system/std',
	'sp-core/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-storage/std',
    'pallet-timestamp/std',
	'sp-io/std',
	'lite-json/std',
	'pallet-tfgrid/std',
	'pallet-tft-price/std'
]