[package]
name = "pallet-validator"
version = "1.0.0"
edition = "2018"

[dependencies]
sp-std = { default-features = false, version = '3.0.0'}
sp-runtime = { default-features = false, version = '3.0.0'}
sp-io = { default-features = false, version = '3.0.0'}
sp-core = { default-features = false, version = '3.0.0'}
frame-support = { default-features = false, version = '3.0.0'}
frame-system = { default-features = false, version = '3.0.0'}
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { features = ['derive'], optional = true, version = '1.0.101'}

[dependencies.substrate-validator-set]
default-features = false
path = "../substrate-validator-set"

[features]
default = ['std']
std = [
    'codec/std',
    'sp-std/std',
    'sp-runtime/std',
    'frame-support/std',
    'sp-core/std',
    'sp-io/std',
    'serde',
    'frame-system/std',
    'substrate-validator-set/std'
]