[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'tfchain'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.2.0-rc4'

[[bin]]
name = 'tfchain'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = {package = "substrate-build-script-utils", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
vergen = "3.1.0"

[dependencies]
futures = "0.3"
hex-literal = "0.2.1"
jsonrpc-core = "18.0.0"
log = "0.4"
structopt = "0.3.8"
jsonrpsee = { version = "0.15.1", features = ["server"] }
clap = { version = "4.0.9", features = ["derive"] }
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.64"

frame-benchmarking = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.31"}
frame-system = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.31"}
frame-benchmarking-cli = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.31"}
pallet-transaction-payment-rpc = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
pallet-transaction-payment = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
sc-basic-authorship = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
sc-cli = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31", features = ["wasmtime"]}
sc-client-api = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
sc-executor = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
sc-service = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
sc-consensus = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
sc-consensus-aura = {git = "https://github.com/dylanverstraete/aura", branch = "polka_0.9.31"}
sc-finality-grandpa = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
sc-finality-grandpa-rpc = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
sc-keystore = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
sp-keyring = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
sc-network = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
sc-rpc = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
sc-rpc-api = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
sc-telemetry = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
sc-transaction-pool = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
sc-transaction-pool-api = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
sp-api = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
sp-block-builder = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
sp-blockchain = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
sp-consensus = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
sp-consensus-aura = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
sp-core = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
sp-finality-grandpa = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
sp-inherents = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
sp-runtime = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
sp-timestamp = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
sp-transaction-pool = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
frame-rpc-system = {package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31"}
frame-try-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.31", optional = true }
try-runtime-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.31", optional = true }

tfchain-runtime = { path = '../runtime' }

[features]
default = []
runtime-benchmarks = ["tfchain-runtime/runtime-benchmarks"]
cli = [ "try-runtime-cli" ]
try-runtime = [ "tfchain-runtime/try-runtime", "try-runtime-cli" ]
